--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+server.port=8080
+spring.profiles.active=dev
+#region DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/property_manager_db?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=9863254
+spring.flyway.baselineOnMigrate=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.encoding=UTF-8
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.hibernate.ddl-auto=update
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.session.jdbc.initialize-schema=always
+spring.session.store-type=jdbc
+#endregion
+#region security
+security.token.header=accessToken
+security.token.secret=secret_token!
+#1800000=30minutes
+#900000=15minutes
+security.token.expire=900000
+security.refresh.token.expire=1800000
+#endregion security
+#region password
+secret.key.encrypt=+bbrrrw6KFn+RWTe8vUU7U5u8z2Y9XherVwdff/GSbV
+#endregion password
+#spring.profiles.active=dev
 
