--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,6 @@ dependencies {
 
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
-//    implementation group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.5.2'
-    implementation group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '2.0.0.RELEASE'
-
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
@@ -73,12 +70,9 @@ dependencies {
     compile group: 'com.querydsl', name: 'querydsl-jpa', version: '4.2.1'
     compile group: 'com.querydsl', name: 'querydsl-apt', version: '4.2.1'
 
-    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
-
     //Swagger
-//    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-//    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.4.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.4.0'
 
 }
 
