Add multiple property -Geoapify service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,9 @@ security.refresh.token.expire=1800000
 #region password
 secret.key.encrypt=+bbrrrw6KFn+RWTe8vUU7U5u8z2Y9XherVwdff/GSbV
 #endregion password
+#region goapify
+geoapify.api.key=b2e68eac125f498ea9fc9ebe0ca33787
+geoapify.retry.time=1000
+#endregion goapify
 #spring.profiles.active=dev
 
