--- a/build.gradle
+++ b/build.gradle
@@ -55,12 +55,16 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+
+    implementation group: 'org.json', name: 'json', version: '20210307'
+
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 
@@ -71,8 +75,8 @@ dependencies {
     compile group: 'com.querydsl', name: 'querydsl-apt', version: '4.2.1'
 
     //Swagger
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.4.0'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.4.0'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.0'
 
 }
 
