--- a/build.gradle
+++ b/build.gradle
@@ -36,19 +36,9 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.session:spring-session-jdbc'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-    implementation group: 'org.springframework.data', name: 'spring-data-envers', version: '0.2.0.RELEASE'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
@@ -56,23 +46,32 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 
+    annotationProcessor(
+            "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final",
+            "javax.annotation:javax.annotation-api:1.3.2",
+            "org.projectlombok:lombok:1.18.20"
+    )
+
+    //HTTP client
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
 
+    // JSON encoders/decoders
     implementation group: 'org.json', name: 'json', version: '20210307'
 
+    //JWT token
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
+    //Validation
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 
     compile group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
 
-    compile group: 'com.querydsl', name: 'querydsl-core', version: '4.2.1'
-    compile group: 'com.querydsl', name: 'querydsl-jpa', version: '4.2.1'
-    compile group: 'com.querydsl', name: 'querydsl-apt', version: '4.2.1'
+    //FLyway
+    compile "org.flywaydb:flyway-core:6.5.7"
 
     //Swagger
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.0'
