--- a/build.gradle
+++ b/build.gradle
@@ -68,14 +68,14 @@ dependencies {
     //Validation
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 
-    compile group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
+    implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
 
     //FLyway
-    compile "org.flywaydb:flyway-core:6.5.7"
+    implementation "org.flywaydb:flyway-core:6.5.7"
 
     //Swagger
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.0'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.0'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.0'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.0'
 
 }
 
