Logging exceptions in file property-manager.log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,9 @@ secret.key.encrypt=+bbrrrw6KFn+RWTe8vUU7U5u8z2Y9XherVwdff/GSbV
 geoapify.api.key=b2e68eac125f498ea9fc9ebe0ca33787
 geoapify.retry.time=1000
 #endregion goapify
+#region logs
+logging.file.name=property-manager.log
+logging.logback.rollingpolicy.max-file-size=100MB
+#endregion logs
 #spring.profiles.active=dev
 
